# sketch-to-image

./: README.md  pyproject.toml  requirements.txt
frontend/: index.html
src/sketch2image/: __init__.py  cli.py  main.py  models.py
